# dx-ax-container

./: .gitignore  README.md
backend/: Cargo.toml  README.md  test.rs
backend/.dockerfile/: Dockerfile
backend/migrations/: 20240608054255_mat_user.sql  20240609052051_retrn_fresh_token.sql
backend/src/: lib.rs  main.rs
backend/src/handlers/: mod.rs  productization_handler.rs  refresh_token_handler.rs  user_handler.rs
backend/src/models/: mod.rs  productization_model.rs  user.rs
backend/src/persistence/: postgres.rs
backend/src/routes/: mod.rs  productization_route.rs  user.rs
backend/src/scheme/: mod.rs
backend/src/utils/: jwt_lib.rs  mod.rs  state.rs
client-react/: package.json  pnpm-lock.yaml
client-react/src/components/ComboBox/Option/: index.tsx
client-react/src/components/Input/: getWarnMap.ts  index.tsx
client-react/src/type/: DeepPartial.ts  EmptyObject.ts  InvalidInfo.ts  NestedKeyOf.ts  Position.ts  Setter.ts  State.ts
dev-tools/: .env  docker-compose.yml  makefile
front-react/: vite.config.ts
front-react/.devcontainer/: .devcontainer.json  Dockerfile
front-react/src/: App.tsx
front-react/src/components/ComboBox/: index.tsx
front-react/src/components/Table/: getColumnBundlesParRowHeader.ts  getColumnOptionMap.ts  index.tsx
front-react/src/components/Table/ColumnBundle/: index.tsx
front-react/src/components/Table/ColumnBundles/: index.tsx
front-react/src/fn/: isTargetingControllable.ts  useOptional.ts  usePagination.ts  useSorted.ts
front-react/src/fn/state/: makeMapped.ts
(+1 files in other folders)
