[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
tokio-postgres = "0.7"
serde_derive = "1.0"
lazy_static = "1.4"
dotenv = "0.15"
hyper = { version = "1.3", features = ["full"] }
tower = "0.4"
tower-http = {version = "0.5.0", features = ["add-extension", "cors", "fs"]}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
warp = "0.3"
jsonwebtoken = "9.3.0"